# quacklint

./: .gitignore  README.md  pyproject.toml
benchmarks/: README.md  bench.py  seed.sql  suite_pg.yaml  suite_pg_declarative.yaml
docs/: checks-reference.md  ci-integration.md  philosophy.md  spec.yaml.md
examples/: README.md
examples/taxi/: README.md  quacklint.yaml
examples/taxi/data/: trips.csv
scripts/: gen_checks_reference.py
src/quacklint/: __init__.py  cli.py  errors.py  report.py  sources.py  suite.py
src/quacklint/checks/: __init__.py  base.py  builtin.py
tests/: conftest.py  test_checks.py  test_cli.py  test_docs.py  test_suite_parsing.py
tests/fixtures/: valid_suite.yaml
