[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quacklint"
version = "0.1.0"
description = "Data quality declarativo para DuckDB: checks en YAML compilados a SQL."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0",
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
    "pydantic>=2.7",
]

[project.scripts]
quacklint = "quacklint.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-pyyaml>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/quacklint"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["quacklint"]

[tool.mypy]
strict = true
python_version = "3.11"
files = ["src/quacklint", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
